# moloch

./: .env.sample  .eslintrc.js  Cargo.toml  LICENSE  Makefile  README.md  build.sh  clean.sh  deploy.sh  notes.txt  package.json
contracts/: .gitignore
contracts/moloch/src/: ft_callbacks.rs  guild_bank.rs  lib.rs  proposal_escrow.rs  storage_impl.rs
contracts/res/: moloch.wasm
contracts/test-fungible-token/: Cargo.toml
contracts/test-fungible-token/src/: lib.rs
contracts/tests/sim/: test_moloch.rs  test_storage.rs  utils.rs
moloch/: Cargo.toml
moloch/src/: ft_callbacks.rs  guild_bank.rs  lib.rs  proposal_escrow.rs  storage_impl.rs
res/: moloch.wasm  test_fungible_token.wasm
scripts/: build.sh  deploy.sh
src/: ft_test_token.rs  guild_bank.rs  lib.rs
test/: moloch.test.js  utils.js
test-fungible-token/: Cargo.toml
tests/sim/: main.rs  test_moloch.rs  test_storage.rs  utils.rs
