[package]
name = "moloch"
version = "0.1.0"
authors = ["Alexander Keating <keating.dev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
near-sdk = "3.0.1"
near-contract-standards = "3.1.1"
